# jjpeg

./: .gitignore  cppbuild.sh  pom.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/libjnipp/: CMakeLists.txt
src/main/cpp/libjnipp/cpp/: CMakeLists.txt  JInputStream.cpp  JInputStream.h  JNISample.cpp  JNISample.h
src/main/cpp/libjnipp/cpp/jni/: functions.hpp  wrapping.hpp
src/main/cpp/libjnipp/java/: CMakeLists.txt  JNISample.java  JNITest.java
src/main/cpp/libjpeg/: CMakeLists.txt
src/main/cpp/libjpeg/12/: CMakeLists.txt
src/main/cpp/libjpeg/16/: CMakeLists.txt  jpeglib16.h
src/main/cpp/libjpeg/8/: CMakeLists.txt
src/main/cpp/src/: CMakeLists.txt  JpegCodec.cpp  JpegCodec.h  main.cpp
src/main/java/cn/net/xyan/javacpp/: JPEG16.java  VectorTest.java
src/test/java/cn/net/xyan/javacpp/: Jpeg16Test.java
